[metadata]
name = jheapq
version = 0.0.1
author = yonetaniryo
author_email = yonetani.vision@gmail.com
url = https://github.com/yonetaniryo/jax-heapq
description = JAX implmentation of heapq
description-content-type = text/markdown
long_description = file: README.md
keywords = jax heapq
license_files = file: LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Robot Framework :: Library
    Framework :: Robot Framework :: Tool

[options]
packages = find:
install_requires =
    jax
    jaxlib
    chex

[options.extras_require]
dev =
    pytest
    jupyterlab
    pysen==0.10.1
    black==21.10b0
    flake8==4.0.1
    isort==5.10.1
    mypy==0.910
